hphp/hack/test/typecheck/expression_trees/self_static_method_call.php.exp
File "self_static_method_call.php", line 13, characters 22-37:
Unsupported syntax for expression trees. (Parsing[1002])
